/*
** EPITECH PROJECT, 2017
** ChangeLog
** File description:
** Bistro ChangeLog
*/

//  Autor
//    vinchenzo.guibert@epitech.eu
//    thomas.nicollet@epitech.eu
//    alexandre.fourcat@epitech.eu

//___________________________________________________________________________//

Name         :
Date         :
Changelog by :
Description  :

//___________________________________________________________________________//

Name         : Unit tests and structuratio of the project
Date         : October 24 2017
Changelog by : afourcat vinchenzo
Description  :
we write add and sub unit tests then we tought about systems of the project

//___________________________________________________________________________//

Name         : first error gestion
Date         : October 23 2017
Changelog by : afourcat
Description  :
I make two first error functions that display errors.

//___________________________________________________________________________//

Name         : Beginning
Date         : October 18 2017
Changelog by : afourcat
Description  :
I Create the repository and I write 2 files ChangeLog and Project that will be
used by us during the bistro project.