@@ -8,40 +8,25 @@
 //----------------------------------TODO-------------------------------------//
 
 //-----VINZ-----/
+end the binary tree
+make the division
 
 //-----THOMAS---/
+end the postix function
+make the modulo
 
 //-----ALEX-----/
-  Write error function think about error system
+end the multiplication
+faire les Makefile
 
+1- Prioritée de calculs                                             70%
 
-CONCEPT : Calcul en chaine de charactère.
+2- Gestion des calculs en chaine de caractère                       40%
 
-Utilisitaion de pointeurs de functions.
+3- Gerer les bases                                                  0%
 
-code full norme une fonction par concept.
-      exemple:
-        My_mul = multiplie
-        My_print_res = print le resultat
-
-Fichier source et header clairement séparer !
-header et source pour chaque styles de functions.
-      exemple :
-        computing.h   computing.src
-        printing.h    printing.src
-        priority.h    priority.src  etc...
-
-TRAVAUX
-
-1- Prioritée de calculs
-    -système de gestion des parenthèse etc, calcule dans le bon sens
-
-2- Gestion des calculs en chaine de caractère
-
-3- Recuperation des Arguments et repartition dans le calcul
-
-4- Imprévues ...
-
-4- Interface graphique ?
+4- Interface graphique ?                                            0%
 
 //----------------------------------DONE-------------------------------------//
+
+Nothing..
