@@ -1,0 +1,13 @@
+/*
+** EPITECH PROJECT, 2017
+** main.c
+** File description:
+** Main function of the infadd project
+*/
+
+#include <infin_add.h>
+
+int add(char *str1, char *str2)
+{
+	return (inf_add(str1, str2));
+}
