@@ -1,0 +1,16 @@
+/*
+** EPITECH PROJECT, 2017
+** mul_conv.c
+** File description:
+** conversion for multiply
+*/
+
+int char_to_int(char c)
+{
+	return (c - 48);
+}
+
+char int_to_char(int i)
+{
+	return (i + 48);
+}
