@@ -5,19 +5,23 @@
 ## Makefile used for unit tests
 ##
 
-SRC_DIR		=	$(realpath ../src/)
+SRC_DIR		=	$(realpath ../src)
 
 SRC_UT_DIR	=	$(realpath .)
 
-SRC		=	$(SRC_DIR)/stack.c #\
+SRC		=	$(SRC_DIR)/stack.c \
+			$(SRC_DIR)/operator/add/add.c 
 
-SRC_UT		=	$(SRC_UT_DIR)/tests_stack.c #\
+SRC_UT		=	$(SRC_UT_DIR)/tests_stack.c \
+			$(SRC_UT_DIR)/tests_add.c 
 
 OBJ		=	$(SRC:.c=.o) $(SRC_UT:.c=.o)
 
 CFLAGS		=	-Wall -Wextra --coverage
 
-LDFLAGS		=	-I../include -L/usr/local/lib -lcriterion -lgcov
+LDFLAGS		=	-L/usr/local/lib -lcriterion -lgcov
+
+INCL		=	-I../include
 
 NAME		=	units
 
@@ -25,10 +29,7 @@ all:		$(NAME)
 
 
 $(NAME):	$(OBJ)
-		gcc -o $(NAME) $(OBJ) $(CFLAGS) $(LDFLAGS)
-
-##$(OBJ):
-##	gcc -c $(SRC) $(SRC_UT) $(CDFLAGS) $(LDFLAGS)
+		gcc  $(INCL) -o $(NAME) $(OBJ) $(CFLAGS) $(LDFLAGS)
 
 clean:
 		rm -f $(OBJ)
